# prod-tracking-mvp

./: .env.example  .gitignore  README.md  manage.py  package-lock.json  package.json  passenger_wsgi.py  pyproject.toml  requirements.txt  selftest-cert.crt  selftest-cert.key  tailwind.admin.config.js  tailwind.public.config.js
common/: admin.py  fields.py  models.py  unfold.py
common/services/: image.py
core/: settings.py  urls.py
seeder/: factories.py  tracker_dev.py  users_dev.py
templates/layouts/: base.html
templates/partials/: about_section.html  article_card.html  article_details.html  articles_section.html  career_header.html  client_logo.html  clients_section.html  contact_information.html  faq_section.html  featured_clients_section.html  featured_news_section.html  footer.html  header.html  hero_carousel.html  introduction_section.html  office_location_map.html  open_positions.html  overview_section.html  services_section.html  stats_section.html  team_card.html  team_section.html  testimonials_section.html  theme_switch.html  wave_pattern_background.html
templates/tracker/: dashboard.html  scan_qr.html  scanner_scan.html
templates/www/: about.html  article.html  career.html  contact.html  customers.html  home.html  news.html
tests/: conftest.py
tracker/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
tracker/migrations/: 0001_initial.py  0002_historicalscanevent_scanevent.py  0002_remove_bundle_pieces_bundlepreset_bundle_preset.py  (+2 more)
users/: admin.py  backends.py  forms.py  models.py
users/migrations/: 0001_initial.py
(+6 files in other folders)
